# solana-arbitrage-bot

./: .gitignore  Cargo.toml
arbitrage/: Anchor.toml
arbitrage/programs/arbitrage/: Cargo.toml
arbitrage/programs/arbitrage/src/: lib.rs
arbitrage/tests/: Cargo.toml
arbitrage/tests/src/: test_initialize.rs
client/: Cargo.toml  localnet_defaults.json  mainnet_defaults.json
client/src/: arb.rs  constants.rs  lib.rs  main.rs  pool.rs  tmp.rs  utils.rs
client/src/pool_utils/: stable.rs
client/src/pools/: aldrin.rs  mercurial.rs  mod.rs  orca.rs  raydium.rs  saber.rs  serum.rs
client/src/serialize/: pool.rs  token.rs
client/src/setup/: setup_ata.rs  setup_open_orders.rs
client/src/tests/: mod.rs  quotes.rs  test_devnet_anchor_program.rs
common/: Cargo.toml
common/src/: lib.rs  reqwest_utils.rs
jup-agg/: Cargo.toml
jup-agg-proxy/: Anchor.toml
jup-agg-proxy/programs/jup-agg-proxy/: Cargo.toml
jup-agg-proxy/programs/jup-agg-proxy/src/: lib.rs
jup-agg-proxy/tests/: Cargo.toml
jup-agg-proxy/tests/src/: test_initialize.rs
jup-agg/arb/: arb.ts  package.json
jup-agg/src/: config.rs  jup_api.rs  main.rs  mints.rs
mainnet-fork/: orca_swap.ts  package-lock.json
onchain-data/arbitragers/: -1_specific_arb_signers_123658614.json  -2_specific_arb_signers_123658613.json  -3_specific_arb_signers_123658612.json  -4_specific_arb_signers_123658611.json  0_specific_arb_signers_123658615.json  1_specific_arb_signers_123658616.json
onchain-data/results/: 6hyuGqKQyhAEipjtaquiNHfd1dVjrNT3FzzanXurbK4W_Mon, 07 Mar 2022 14:46:51 GMT_Mon, 07 Mar 2022 20:42:45 GMT.json  AasQTQH9oroodW5vi3uEoDuLyJDVfMz7GWehvisdGmDX_Mon, 07 Mar 2022 14:42:24 GMT_Mon, 07 Mar 2022 21:00:47 GMT.json  BWbY5ZvVysGhZbYYE75HCT3G4VZ3hEmoSGNLJHqWDaqz_Mon, 07 Mar 2022 00:35:40 GMT_Mon, 07 Mar 2022 20:31:36 GMT.json  FhuJfyiM3hH32qA3NYz1NADnZhu3GzSw4pL1pcfFNW5Y_Sun, 06 Mar 2022 18:44:22 GMT_Mon, 07 Mar 2022 20:56:53 GMT.json  GmhAnaL9UkY23zxbfzpt7UPYM5dcdN3iGXLCFD7RtBrE_Wed, 02 Mar 2022 22:24:26 GMT_Sun, 06 Mar 2022 00:27:06 GMT.json  HnNjQLegiZU6Mh854bRZsEumCcyqFreyxo9BNc6tEjF7_Mon, 07 Mar 2022 02:49:14 GMT_Mon, 07 Mar 2022 21:02:09 GMT.json
pools/aldrin/: 2AiUX9wcMUJh8vcnx2fHY9kHrw2f1mamV5fnriLZQDHv_aldrin_pool.json
pools/serum/: 2Emb4Niq8j4dPLYeoKecvGms8P2GWXYCiao14DpKu1b9_serum_dex.json  2FQbPW1ticJz2SMMbEXxbKWJKmw1wLc6ggSP2HyzdMen_serum_dex.json
program/: Anchor.toml  commands.txt  devnet.txt  package.json  test.txt
program/programs/tmp/: Cargo.toml
program/programs/tmp/src/: lib.rs  state.rs
program/programs/tmp/src/orca_whirlpool_cpi/: context.rs  mod.rs  state.rs  util.rs
program/programs/tmp/src/raydium_clmm/: config.rs
program/programs/tmp/src/swaps/: aldrin.rs  mercurial.rs  meteora_damm.rs  meteora_dlmm.rs  mod.rs  orca.rs  orca_whirlpool.rs  raydium_amm.rs  raydium_clmm.rs  saber.rs  serum.rs
program/tests/: orca_whirlpool.ts
