[workspace]
members = [
    "client",
#    "program",
    "jup-agg"
]

[workspace.dependencies]
solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-client = "1.18.26"
anchor-spl = { version = "0.30.1", features = ["dex"] }
anchor-client = { version = "0.30.1", features = ["debug"] }
anchor-lang = "0.30.1"

spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
overflow-checks = true
