[workspace]
members = [
    "client", "common",
#    "program",
    "jup-agg"
]
resolver = "2"

[workspace.dependencies]
solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-client = "1.18.26"
anchor-spl = { version = "0.30.1", features = ["dex"] }
anchor-client = { version = "0.30.1", features = ["debug"] }
anchor-lang = "0.30.1"

spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"]}

reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
dotenv = "0.15.0"
rand = "0.8.5"
tokio = { version = "1.35.0", features = ["full"] }


[profile.release]
overflow-checks = true
