[package]
name = "tmp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "tmp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
solana-program =  "1.18.26"
anchor-spl = {version="0.30.1", features=["dex"]}
spl-memo = "4.0.0"

#spl-token = "=4.0.0"
#spl-memo = "=4.0.0"
#num_enum = "=0.7.0"
#ahash = "=0.8.6"
sha2 = "0.10.2"

# raydium
#amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", package = "amm-anchor" }
#raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
#    "no-entrypoint",
#    "cpi",
#] }

# orca whirlpool
#whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.29.0" }